Fixed the issues mentioned in PR review.